ocp-deployment/service-jupyter-minimal-notebook.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: minimal-notebook
    app.kubernetes.io/component: minimal-notebook
    app.kubernetes.io/instance: minimal-notebook
  name: minimal-notebook
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: minimal-notebook
  sessionAffinity: None
  type: ClusterIP
